# cursfin

./: CMakeLists.txt  main.cpp
include/: base_drawer.h  camera.h  creator.h  draw.h  easy_scen_controller.h  light.h  model.h  object.h  perlin_noise.h  renderer.h  scalar_field.h  scen_controller.h  texture.h  util.h
src/: camera.cpp  creator.cpp  draw.cpp  easy_scen_controller.cpp  light.cpp  renderer.cpp  scalar_field.cpp  scen_controller.cpp  texture.cpp  util.cpp
